--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sequelize": "^6.32.1"
   },
   "scripts": {
+    "start": "node index.ts",
     "dev": "nodemon index.ts"
   },
   "devDependencies": {
