--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "sanitizer": "^0.1.3",
