--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
     "sequelize": "^6.32.1"
   },
   "scripts": {
-    "start": "node index.ts",
-    "dev": "nodemon index.ts"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/multer": "^1.4.7",
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
+    "prettier": "^3.0.0"
   }
 }
