--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "sanitizer": "^0.1.3",
