--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
-    "uuid": "^9.0.0",
-    "xss": "^1.0.14"
+    "xss": "^1.0.14",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "node index.js",
