--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -10,8 +11,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
-    "xss": "^1.0.14",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xss": "^1.0.14"
   },
   "scripts": {
     "start": "node index.js",
